# neoParSA

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md
cmake/: CMakeLists.txt
cmake/parsa/: FBMoveNoComm.h  FBNCTheta.h  MPIState.h  Makefile  Mixing.hpp  adaptMix.hpp  annealer.h  annealer.hpp  criCount.cpp  criCount.h  feedbackMove.hpp  intervalMix.h  intervalMix.hpp  oneStep.cpp  pannealer.hpp  parallelFBMove.h  parallelFBMove.hpp  plsa.h  pulseBcast.hpp  rejCount.h  rejCountP.cpp  rejCountP.h  simPLam.cpp  tempCount.cpp  tempCount.h
cmake/tests/: Makefile
cmake/tests/fly/: CMakeLists.txt  flyData.cpp  fly_expHold-IndMove.cpp  fly_expHold-mpi.cpp  fly_sa-mpi.cpp  fly_simPLam.cpp  maternal.cpp  test-2
cmake/tests/rastrigin/: psolve_rst.cpp
cmake/tests/tsp/: tsp.cpp
openmp/parsa/: CMakeLists.txt  FBMoveNoComm.hpp  FBNCTheta.hpp  aState.h  adaptMix.h  expHold.cpp  expHold.h  invLinearFit.cpp  oneStep.h  pannealer.hpp  parallelFBMove.hpp  pulseBcast.hpp  simPLam.h  utils.h
openmp/tests/fly/: DataLists.cpp  flyData.h  fly_expHold-amix.cpp  fly_expHold-mixing-IM.cpp  fly_expHold-mixing.cpp  fly_expHold-mpi.cpp  fly_sa.cpp  fly_simPLam.cpp  zygotic.h
openmp/tests/rastrigin/: rst_expHold.cpp  rst_pEH-mix.cpp
openmp/tests/tsp/: solve_tsp.cpp  tsp.cpp  tsp.h  tsp_expHold-mix.cpp  tsp_expHold.cpp  tsp_simPLam.cpp
parsa/: CMakeLists.txt  FBMoveIntervalMix.h  FBMoveIntervalMix.hpp  FBMoveNoComm.h  FBMoveNoComm.hpp  FBNCTheta.h  FBNCTheta.hpp  Makefile  Mixing.h  Mixing.hpp  PStats.cpp  PStats.h  aState.h  adaptMix.h  adaptMix.hpp  annealer.cpp  annealer.h  annealer.hpp  coupledAnnealer.h  coupledAnnealer.hpp  criCount.cpp  criCount.h  criCountP.cpp  criCountP.h  debugOut.cpp  debugOut.h  dynDebug.cpp  dynDebug.h  expHold.cpp  expHold.h  expHoldP.cpp  expHoldP.h  expParallel.cpp  expParallel.h  exponential.cpp  exponential.h  feedbackMix.h  feedbackMix.hpp  feedbackMove.h  feedbackMove.hpp  (+61 more)
parsa/DoS/: DoS.h  DoS.hpp  PWLE.cpp  PWLE.h  WLEstimator.cpp  WLEstimator.h
parsa/mix/: Mixing.h  adaptMix.h  adaptMix.hpp  feedbackMix.h  feedbackMix.hpp  intervalBest.h  intervalBest.hpp  intervalMix.h  intervalMix.hpp  mixOnce.h  mixOnce.hpp  periodBest.h  periodBest.hpp  pulseBcast.h  pulseBcast.hpp  pulseNoAdopt.h  pulseNoAdopt.hpp  rateMix.h  rateMix.hpp  twoTierMix.h  twoTierMix.hpp
parsa/move/: FBMoveNoComm.h  FBMoveNoComm.hpp  FBNCTheta.h  FBNCTheta.hpp  cauchyMove.h  cauchyMove.hpp  feedbackMove.h  feedbackMove.hpp  fixedThetaMove.h  fixedThetaMove.hpp  parallelCauchyMove.h  parallelCauchyMove.hpp  parallelFBMove.h  parallelFBMove.hpp  parallelTempMove.h  parallelTempMove.hpp  scheduleThetaMove.h  scheduleThetaMove.hpp  scheduleThetaMoveP.h  tempFeedback.h  tempFeedback.hpp
parsa/schedule/: staticCool.cpp  staticCool.h  staticLam.cpp  staticLam.h
parsa/utils/: vectorUtils.h
tests/: CMakeLists.txt  Makefile
tests/UDRST/: CMakeLists.txt  doubleVectorConverter.cpp  staticLam.h  udrst.cpp  udrst.h  udrstPWLS.cpp  udrstWLS.cpp  udrst_EH_fixTheta.cpp  udrst_expFrozen.cpp  udrst_expHold.cpp  udrst_lam.cpp  udrst_pEF-best.cpp  udrst_pEF-fbMix.cpp  udrst_pEF-mix.cpp  udrst_pEF-rMix.cpp  udrst_pEH-coupledMix.cpp  udrst_pEH-fbMix.cpp  udrst_pEH-mix.cpp  udrst_pEH-mixOnce.cpp  udrst_pEH-twoTier.cpp  udrst_scramble.cpp  udrst_simPLam.cpp  udrst_static.cpp
tests/fly/: CMakeLists.txt  DataLists.cpp  DataLists.h  Makefile  fly.cpp  fly.h  flyData.cpp  flyData.h  flyUtils.cpp  flyUtils.h  fly_cauchy_expFrozen.cpp  fly_cauchy_pEF-fbMix.cpp  fly_cauchy_pEF-mix.cpp  fly_expFrozen-tm.cpp  fly_expFrozen.cpp  fly_expHold-IndMove  fly_expHold-IndMove.cpp  fly_expHold-TA.cpp  fly_expHold-amix.cpp  fly_expHold-mixing-IM.cpp  fly_expHold-mixing.cpp  fly_expHold-mpi.cpp  fly_expHold-theta.cpp  fly_expHold.cpp  fly_pEF-fbMix.cpp  fly_pEF-mix.cpp  fly_pEF-tm-fbMix.cpp  fly_pEF-tm-mix.cpp  fly_pEH-fbMix.cpp  fly_pulse  fly_pulse.cpp  fly_pwls.cpp  fly_sa-mpi  fly_sa-mpi.cpp  fly_sa.cpp  fly_simPLam-fbMix.cpp  fly_simPLam.cpp  fly_wls.cpp  g9-template  g9.xml  (+14 more)
tests/rastrigin/: 3D_Rastrigin.xml  CMakeLists.txt  Makefile  psolve_rst  psolve_rst.cpp  rastrigin.cpp  rastrigin.h  rastrigin_problem.cpp  rastrigin_problem.h  rstWLS.cpp  rst_eH-fixedTheta.cpp  rst_expHold.cpp  rst_lam.cpp  rst_pEH-best.cpp  rst_pEH-fbMix.cpp  rst_pEH-mix.cpp  rst_scramble.cpp  rst_simPLam.cpp  solve_rastrigin.cpp  test_rst.cpp
tests/schwefel/: CMakeLists.txt  normSchwefel.cpp  normSchwefel.h  nsch_expHold.cpp  nsch_scramble.cpp
tests/transcpp/: CMakeLists.txt  TF.cpp  TF.h  bindings.cpp  bindings.h  bindingsite.cpp  bindingsite.h  calc_scores.cpp  coeffects.cpp  coeffects.h  competition.cpp  competition.h  conc.cpp  conc.h  cooperativity.cpp  cooperativity.h  datatable.cpp  datatable.h  distance.cpp  distance.h  fasta.cpp  fasta.h  flags.h  gene.cpp  gene.h  getsequence.cpp  interactions.cpp  interactions.h  mode.cpp  mode.h  nuclei.cpp  nuclei.h  nucleus.cpp  nucleus.h  occupancy.cpp  occupancy.h  organism.cpp  organism.h  parameter.cpp  parameter.h  (+41 more)
tests/transcpp/fits/: kim2013.xml  locus.xml  m06.xml  out_txn_model_input_MRPA_baseM.xml
tests/transcpp/sequences/: MRPA_baseM.fa  loci.fa  m06.fa  minpath.fa  path.vector.fa  ressurections.vector.fa
tests/transcpp/sequences/CVS/: Entries  Repository  Root
tests/tsp/: CMakeLists.txt  Makefile  solve_tsp.cpp  test.cpp  test8.xml  tsp.cpp  tsp.h  tsp.xml  tsp_expHold-mix.cpp  tsp_expHold.cpp  tsp_lam.cpp  tsp_printscore.cpp  tsp_problem.cpp  tsp_problem.h  tsp_scramble.cpp  tsp_simPLam.cpp  tsp_test.cpp
