cmake_minimum_required(VERSION 2.8)
project(parsa)

option(DEBUG "Compile with debugging information" OFF)
#if(DEBUG)
#	add_definitions(-DDEBUG)
#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
#else()
#	add_definitions(-DNDEBUG)
#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
#endif(DEBUG)
#add_definitions(-D__GXX_EXPERIMENTAL_CXX0X__)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
find_package(LibXml2 REQUIRED)
find_package(MPI REQUIRED)
include_directories(${LIBXML2_INCLUDE_DIR})
include_directories(${MPI_INCLUDE_PATH})
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
include_directories(parsa)
add_subdirectory(parsa)
add_subdirectory(tests)

