set(RST_COMMON rastrigin.cpp)
set(MPIBINARIES psolve_rst rst_pEH-mix rst_pEH-best rst_simPLam rst_pEH-fbMix)
set(BINARIES ${MPIBINARIES} 
             rst_scramble solve_rst test_rst rst_expHold rst_lam rst_eH-fixedTheta
             rstWLS)

add_executable(test_rst test_rst.cpp ${RST_COMMON})
add_executable(solve_rst solve_rastrigin.cpp ${RST_COMMON})
add_executable(psolve_rst psolve_rst.cpp ${RST_COMMON})
add_executable(rst_expHold rst_expHold.cpp ${RST_COMMON})
add_executable(rst_pEH-mix rst_pEH-mix.cpp ${RST_COMMON})
add_executable(rst_pEH-best rst_pEH-best.cpp ${RST_COMMON})
add_executable(rst_pEH-fbMix rst_pEH-fbMix.cpp ${RST_COMMON})
add_executable(rst_lam rst_lam.cpp ${RST_COMMON})
add_executable(rst_simPLam rst_simPLam.cpp ${RST_COMMON})
add_executable(rst_scramble rst_scramble.cpp ${RST_COMMON})
add_executable(rst_eH-fixedTheta rst_eH-fixedTheta.cpp ${RST_COMMON})
add_executable(rstWLS rstWLS.cpp ${RST_COMMON})

foreach(bin ${BINARIES})
	target_link_libraries(${bin} parsa ${LIBXML2_LIBRARIES})
endforeach()
foreach(mpibin ${MPIBINARIES})
	target_link_libraries(${mpibin} ${MPI_C_LIBRARIES})
endforeach()
add_custom_target(rst DEPENDS ${BINARIES})